--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.6",
+    "sweetalert2": "^11.7.20",
     "vue": "^3.3.4"
   },
   "devDependencies": {
