--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.4",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
